body overflow fix

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ body {
     color: white;
     font-family: 'Roboto', sans-serif;
     padding: 0;
+    width: 100vw;
+    height: 100vh;
     overflow-x: hidden;
 }
 /*! ********************** MAIN SECTION  **************************/
@@ -39,6 +41,7 @@ main {
     -webkit-background-size: cover;
     background-size: cover;
     position: absolute;
+    top: 0;
     z-index: -2;
     width: 100vw;
     height: 100vh;
